[tool.poetry]
name = "sirdogebot"
version = "0.1.1"
description = "A fun little meme project while I am at work"
authors = ["ThePalad1n"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
youtube-dl = "^2021.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
